--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ services:
     rabbitmq:
         image: rabbitmq:3-management-alpine
         container_name: 'rabbitmq'
+        restart: always
         ports:
           - '5672:5672'
           - '15672:15672'
@@ -29,6 +30,15 @@ services:
           - ~/.docker-conf/rabbitmq/log/:/var/log/rabbitmq
         networks:
           - rabbitmq_go_net
+            #faceit-users:
+            #build:
+            #context: .
+            #dockerfile: Dockerfile
+            #image: faceit-users:latest
+            #container_name: 'faceit-users'
+            #restart: always
+            #ports:
+            #- '8888:8888'
 
 networks:
   rabbitmq_go_net:
